--- a/configtx.yaml
+++ b/configtx.yaml
@@ -77,6 +77,22 @@ Organizations:
             # encoded in the genesis block in the Application section context
             - Host: peer0.lsp.main.tcloud.kpn.org
               Port: 7051
+    - &delivery
+        # DefaultOrg defines the organization which is used in the sampleconfig
+        # of the fabric.git development environment
+        Name: deliveryMSP
+
+        # ID to load the MSP definition as
+        ID: deliveryMSP
+
+        MSPDir: crypto-config/peerOrganizations/delivery.main.tcloud.kpn.org/msp
+
+        AnchorPeers:
+            # AnchorPeers defines the location of peers which can be used
+            # for cross org gossip communication.  Note, this value is only
+            # encoded in the genesis block in the Application section context
+            - Host: peer0.delivery.main.tcloud.kpn.org
+              Port: 7051
 ################################################################################
 #
 #   SECTION: Application
@@ -146,7 +162,7 @@ Orderer: &OrdererDefaults
 ################################################################################
 Profiles:
 
-    OneOrgOrdererGenesis:
+    FourOrgOrdererGenesis:
         Orderer:
             <<: *OrdererDefaults
             Organizations:
